--- a/index.html
+++ b/index.html
@@ -140,24 +140,24 @@ button:disabled {
 
 <script>
   const questionsData = [
-    { img: "images/01_Article_StandFirst.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Article Title", "Sub-Head", "Article Standfirst", "Article Byline"], correct: "C" },
-    { img: "images/02_Section.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Article Header", "Reader feedback", "Section", "Index"], correct: "C" },
-    { img: "images/03_Article_Title.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Author", "Article Headline", "Section", "Sub-Header"], correct: "B" },
-    { img: "images/04_Article_Subhead.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Byline", "Secondary heading", "Caption", "Footer"], correct: "B" },
-    { img: "images/05_Article_Lead_Text.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Main points", "Author’s full history", "Table of contents", "Short Summary of the Article"], correct: "D" },
-    { img: "images/06_Article_Full_Byline.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Editor’s comment", "Article category", "Author’s name", "Image location"], correct: "C" },
-    { img: "images/07_DropCaps.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["DropCaps", "Denote end", "Spell check", "Add links"], correct: "A" },
-    { img: "images/08_How_Many_Paragraphs.jpg", q: "How many paragraphs are visible in this article layout?", a: ["19", "18", "20", "17"], correct: "A" },
-    { img: "images/09_Sub-head_of_Article.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Lead", "Byline", "Sub-heading", "Pullquote"], correct: "C" },
-    { img: "images/10_Image_Caption.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Photo credit", "Explain the image", "Promote sponsors", "Nothing"], correct: "B" },
-    { img: "images/11_Image_Credit.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Provide metadata", "Acknowledgment to the image source,", "Add filters", "Show format"], correct: "B" },
-    { img: "images/12_Pullquote.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Break layout", "Quotation", "Title of section", "Sub-heading"], correct: "B" },
-    { img: "images/13_Pullquote_Credit.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Author of the Quotation", "Publication", "Speaker", "Photographer"], correct: "A" },
-    { img: "images/14_Boxout.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Main headline", "Boxout", "Footer", "SEO block"], correct: "B" },
-    { img: "images/15_Callout.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Pop-up", "Highlighted fact", "Note", "Date"], correct: "B" },
-    { img: "images/16_Underline.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Bolden", "Strikeout", "Underline", "Italicize"], correct: "C" },
-    { img: "images/17_Italic.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Italic", "Strong", "Underline", "Insert links"], correct: "A" },
-    { img: "images/18_Bold.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Add color", "Bold", "Add link", "Reduce visibility"], correct: "B" }
+    { img: "01_Article_StandFirst.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Article Title", "Sub-Head", "Article Standfirst", "Article Byline"], correct: "C" },
+    { img: "02_Section.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Article Header", "Reader feedback", "Section", "Index"], correct: "C" },
+    { img: "03_Article_Title.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Author", "Article Headline", "Section", "Sub-Header"], correct: "B" },
+    { img: "04_Article_Subhead.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Byline", "Secondary heading", "Caption", "Footer"], correct: "B" },
+    { img: "05_Article_Lead_Text.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Main points", "Author’s full history", "Table of contents", "Short Summary of the Article"], correct: "D" },
+    { img: "06_Article_Full_Byline.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Editor’s comment", "Article category", "Author’s name", "Image location"], correct: "C" },
+    { img: "07_DropCaps.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["DropCaps", "Denote end", "Spell check", "Add links"], correct: "A" },
+    { img: "08_How_Many_Paragraphs.jpg", q: "How many paragraphs are visible in this article layout?", a: ["19", "18", "20", "17"], correct: "A" },
+    { img: "09_Sub-head_of_Article.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Lead", "Byline", "Sub-heading", "Pullquote"], correct: "C" },
+    { img: "10_Image_Caption.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Photo credit", "Explain the image", "Promote sponsors", "Nothing"], correct: "B" },
+    { img: "11_Image_Credit.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Provide metadata", "Acknowledgment to the image source,", "Add filters", "Show format"], correct: "B" },
+    { img: "12_Pullquote.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Break layout", "Quotation", "Title of section", "Sub-heading"], correct: "B" },
+    { img: "13_Pullquote_Credit.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Author of the Quotation", "Publication", "Speaker", "Photographer"], correct: "A" },
+    { img: "14_Boxout.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Main headline", "Boxout", "Footer", "SEO block"], correct: "B" },
+    { img: "15_Callout.jpg", q: "As per your understanding, what will be the annotated called in Newspaper/Magazine?", a: ["Pop-up", "Highlighted fact", "Note", "Date"], correct: "B" },
+    { img: "16_Underline.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Bolden", "Strikeout", "Underline", "Italicize"], correct: "C" },
+    { img: "17_Italic.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Italic", "Strong", "Underline", "Insert links"], correct: "A" },
+    { img: "18_Bold.jpg", q: "What type of Emphasis do You See for the Annotated Part?", a: ["Add color", "Bold", "Add link", "Reduce visibility"], correct: "B" }
   ];
 
   const nameInput = document.getElementById('name');
